# banking_rag

./: README.md
banking_rag/: pyproject.toml
banking_rag/app/: main.py  rag_engine.py
banking_rag/banking_db/: chroma.sqlite3
